--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,4 @@
 #################
-## Eclipse
-#################
-
-*.pydevproject
-.project
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# PDT-specific
-.buildpath
-
-
-#################
 ## Visual Studio
 #################
 
@@ -43,11 +12,13 @@ local.properties
 
 # Build results
 
-[Dd]ebug/
+#[Dd]ebug/
+#[Bb]in/
+
 [Rr]elease/
 x64/
 build/
-[Bb]in/
+
 [Oo]bj/
 
 # MSTest test Results
