--- a/Heatcodes/Heatcodes.csproj
+++ b/Heatcodes/Heatcodes.csproj
@@ -75,7 +75,6 @@
     <EmbeddedResource Include="StartFrame.resx">
       <DependentUpon>StartFrame.cs</DependentUpon>
     </EmbeddedResource>
-    <Resource Include="small.label" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -88,6 +87,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="small.label" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
